[gd_scene load_steps=5 format=3 uid="uid://bv12o16c4nbn5"]

[ext_resource type="Texture2D" uid="uid://igo0uffm3bq2" path="res://textures/menu/title.png" id="1_5nl72"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_uy6u2"]
[ext_resource type="Texture2D" uid="uid://kpyhrd2jjop3" path="res://textures/menu/quit.png" id="3_1buwp"]
[ext_resource type="Script" path="res://scripts/ponies/Pony2D.gd" id="3_tl55w"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uy6u2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5nl72")

[node name="PlayButton" type="Button" parent="Title"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148438
anchor_top = 0.751389
anchor_right = 0.34375
anchor_bottom = 0.981944
offset_right = 8.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="Title"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.385156
anchor_top = 0.759722
anchor_right = 0.623438
anchor_bottom = 0.969444
offset_right = 8.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="Title"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.688281
anchor_top = 0.75
anchor_right = 0.917188
anchor_bottom = 0.977778
offset_right = 8.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[node name="Quit" type="TextureRect" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25625
anchor_top = 0.413889
anchor_right = 0.777344
anchor_bottom = 0.751389
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1buwp")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="Quit"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0494753
anchor_top = 0.12777
anchor_right = 0.944528
anchor_bottom = 0.934231
offset_top = 1.952
offset_bottom = -0.0180206
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.8, 0.8, 1)
metadata/_edit_use_anchors_ = true

[node name="TS" type="Node2D" parent="."]
position = Vector2(-55, 376)
rotation = 0.567232
scale = Vector2(-1, 1)
script = ExtResource("3_tl55w")
pony_type = 2
pony_emotion = 1

[node name="PP" type="Node2D" parent="."]
position = Vector2(1334, 391)
rotation = -0.567232
script = ExtResource("3_tl55w")
pony_type = 1
pony_emotion = 1

[connection signal="pressed" from="Title/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Title/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Title/QuitButton" to="." method="_on_quit_button_pressed"]
